[package]
name = "network-types"
version = "0.0.4"
description = "Rust structs representing network-related types in Linux."
keywords = ["linux", "network", "osi", "packet", "headers"]
license = "MIT"
authors = ["Michal Rostecki <vadorovsky@gmail.com>"]
repository = "https://github.com/vadorovsky/network-types"
readme = "README.md"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", optional = true }

[dev-dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
